<resources>
    <string name="app_name">homeControl</string>
    <string name="mqtt_ip_hint">IP</string>
    <string name="title_activity_connection">ConnectionActivity</string>
    <string name="connection_ip_label">Ip</string>
    <string name="mqtt_port_hint">Port</string>
    <string name="connect_button_text">Connect</string>
    <string name="save_button_text">save</string>
    <string name="connect_error_msg">Connection error</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="snake_length_hint">Length</string>
    <string name="snake_loop_label">Loop</string>
    <string name="snake_delay_label">Delay</string>
    <string name="snake_direction_there_label">there</string>
    <string name="snake_direction_here_label">here</string>
    <string name="snake_direction_label">Direction</string>
    <string name="menu_lights">Lights</string>
    <string name="menu_stats">Statistics</string>
    <string name="room_spinner_label">Room</string>
    <string name="zone_spinner_label">Zone</string>
    <string name="static_color">Static</string>
    <string name="random_color">Random</string>
    <string name="gradient_color">Gradient</string>
    <string name="led_color_mode_label">Color modes</string>
    <string name="gradient_color_remove">Remove</string>
    <string name="gradient_add_color">Add color</string>
    <string name="led_start_hint">Start</string>
    <string name="led_end_hint">End</string>
    <string name="led_random_delay_hint">Delay</string>
    <string name="gradient_color_speed_hint">Speed</string>
    <string name="gradient_sampler_step">Sampler step</string>
    <string name="gradient_blending">Blending</string>
    <string name="led_mode_choose">Choose mode</string>
    <string name="snake_state">Snake</string>
    <string name="static_state">Static</string>
    <string name="Send">Send</string>
    <string name="led_general_label">Boundaries</string>
    <string name="led_mode_label">Mode</string>
    <string name="led_color_label">Color mode</string>
    <string name="led_gradient_clear">Remove</string>
    <string name="menu_connection">Connection</string>
    <string name="led_brightness">Brightness</string>
    <string name="gradient_remove_color_hint">Remove color</string>

    <string name="pref_key_ip">ip</string>
    <string name="pref_key_port">port</string>
    <string name="temperature_label">Temperature (C):</string>
    <string name="humidity_label">Humidity (%):</string>
    <string name="co2_label">CO2 (ppm):</string>
    <string name="Update">update</string>

    <string-array name="led_modes">
        <item>Snake</item>
        <item>Static</item>
    </string-array>

    <string-array name="blending_modes">
        <item>None</item>
        <item>LinearBlending</item>
    </string-array>

    <!--Order is important (idk better way to do it)-->
    <string-array name="room_topics">
        <item>abc</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pref_led_header">LED</string>
    <string name="settings_button">Settings</string>
    <string name="back_button"><![CDATA[<-]]></string>
    <string name="title_label">Title</string>

</resources>