<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:context=".led.FragmentLed">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/room_spinner_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/room_spinner_label"
            android:layout_centerInParent="true"
            />

        <Spinner
            android:id="@+id/room_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/room_spinner_label"
            android:layout_centerInParent="true"

            />

        <TextView
            android:id="@+id/zone_spinner_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zone_spinner_label"
            android:layout_toEndOf="@id/room_spinner"
            android:layout_centerInParent="true"
            />

        <Spinner
            android:id="@+id/zone_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/zone_spinner_label"
            android:layout_centerInParent="true"
            />

        <Button
            android:id="@+id/led_update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:background="@color/light_gray"
            android:text="@string/Update"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <com.google.android.material.slider.Slider
        android:theme="@style/AppTheme"
        android:id="@+id/brightness_slider"
        android:valueFrom="0"
        android:valueTo="255"
        android:stepSize="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--General part-->
            <Button
                android:id="@+id/general_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/led_general_label"/>
            <include
                android:id="@+id/general_include"
                layout="@layout/led_general"
                android:visibility="gone"/>

            <!--Mode part-->
            <Button
                android:id="@+id/mode_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/led_mode_label"/>
            <include
                layout="@layout/led_mode_snake"
                android:id="@+id/mode_snake_include"
                android:visibility="gone"/>

            <!--Color part-->
            <Button
                android:id="@+id/color_mode_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/led_color_label"/>
            <include
                layout="@layout/led_color_gradient"
                android:id="@+id/led_color_gradient_include"
                android:visibility="gone"/>
            <include
                layout="@layout/led_color_random"
                android:id="@+id/led_color_random_include"
                android:visibility="gone"/>
            <include
                layout="@layout/led_color_static"
                android:id="@+id/led_color_static_include"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/led_send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Send"/>


</LinearLayout>