<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".statistics.Statistics">


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/temperature_label"
           android:layout_marginEnd="10pt"/>
       <TextView
           android:id="@+id/temperature_value_label"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text=""/>
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity_label"
            android:layout_marginEnd="10pt"/>
        <TextView
            android:id="@+id/humidity_value_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/co2_label"
            android:layout_marginEnd="10pt"/>
        <TextView
            android:id="@+id/co2_value_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>
    </LinearLayout>

    <Button
        android:id="@+id/climate_toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/climate_toggle"/>

</LinearLayout>